[gd_scene load_steps=6 format=3 uid="uid://b8ykc8s8x8j15"]

[ext_resource type="Texture2D" uid="uid://bmw6l2k81eycp" path="res://Assets/carta.png" id="1_kuphw"]
[ext_resource type="Script" uid="uid://dft7u57xsalcb" path="res://Scripts/components/card_displayButton.gd" id="2_2lyl3"]

[sub_resource type="LabelSettings" id="LabelSettings_lutgg"]
line_spacing = -5.0
font_size = 9
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wj0ox"]
line_spacing = -5.0
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qxxii"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[node name="CardDisplaybutton" type="TextureButton"]
custom_minimum_size = Vector2(186, 235)
anchors_preset = -1
anchor_left = -0.00173611
anchor_right = 0.159722
anchor_bottom = 0.391667
offset_bottom = -18.8
scale = Vector2(1, 1.08)
texture_normal = ExtResource("1_kuphw")
texture_pressed = ExtResource("1_kuphw")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_2lyl3")
metadata/_edit_use_anchors_ = true

[node name="imagem" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.152318
anchor_top = 0.223359
anchor_right = 0.84916
anchor_bottom = 0.578144
offset_top = 0.219429
offset_right = 3.05176e-05
offset_bottom = 0.219391
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Nome_da_carta" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.166667
anchor_top = 0.157604
anchor_right = 0.817204
anchor_bottom = 0.217179
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Nome_da_carta"
label_settings = SubResource("LabelSettings_lutgg")
horizontal_alignment = 1
autowrap_mode = 2
justification_flags = 35
max_lines_visible = 3
metadata/_edit_use_anchors_ = true

[node name="Descrição_do_acontecimento" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0927155
anchor_top = 0.580808
anchor_right = 0.880797
anchor_bottom = 0.833334
offset_top = 3.05176e-05
offset_bottom = 3.05176e-05
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Descrição"
label_settings = SubResource("LabelSettings_wj0ox")
autowrap_mode = 2
clip_text = true
max_lines_visible = 5
metadata/_edit_use_anchors_ = true

[node name="Ano" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.252688
anchor_top = 0.851176
anchor_right = 0.713089
anchor_bottom = 0.923287
offset_top = -0.0263977
offset_right = -1.52588e-05
offset_bottom = 0.0274658
text = "Ano"
label_settings = SubResource("LabelSettings_qxxii")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Tags" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 42.0001
offset_top = 198.148
offset_right = 143.0
offset_bottom = 221.148
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "tags"

[node name="numCarta" type="Label" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 12.037
offset_right = 110.0
offset_bottom = 42.037
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 17
text = "0"
horizontal_alignment = 1
